--- a/mutex/CMakeLists.txt
+++ b/mutex/CMakeLists.txt
@@ -3,4 +3,4 @@ project(mutex C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(mutex main.c)
+add_executable(mutex main.c LinkedList.cpp LinkedList.c)
