--- a/program_verification/ss_program_verification/pom.xml
+++ b/program_verification/ss_program_verification/pom.xml
@@ -8,5 +8,12 @@
     <artifactId>ss-program-verification</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.github.javaparser</groupId>
+            <artifactId>javaparser-core</artifactId>
+            <version>3.6.5</version>
+        </dependency>
+    </dependencies>
 
 </project>
