--- a/program_verification/ss_program_verification/pom.xml
+++ b/program_verification/ss_program_verification/pom.xml
@@ -26,6 +26,13 @@
             <artifactId>javaparser-core</artifactId>
             <version>3.6.5</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.sosy-lab/javasmt-solver-z3 -->
+        <dependency>
+            <groupId>org.sosy-lab</groupId>
+            <artifactId>javasmt-solver-z3</artifactId>
+            <version>z3-4.4.1-1558-gf96cfea</version>
+        </dependency>
     </dependencies>
 
 </project>
